--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,11 +46,12 @@
                         <outlet property="progressView" destination="1Y6-Xo-uQV" id="eB8-bj-sDk"/>
                         <segue destination="ldk-HW-20u" kind="show" identifier="leaveInitialSetup" id="5sa-nP-6NU"/>
                         <segue destination="tCG-0D-c11" kind="show" identifier="NavigatePersonalArea" id="aAJ-mt-opf"/>
+                        <segue destination="Lmd-4V-Rmi" kind="presentation" identifier="showAppIntro" id="eSa-5X-gco"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JC0-GJ-mII" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4196" y="-310"/>
+            <point key="canvasLocation" x="-4559" y="280"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Mur-gJ-XWJ">
@@ -61,7 +63,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="FGW-r6-co8" kind="relationship" relationship="viewControllers" id="JXr-Xd-yHV"/>
+                        <segue destination="T6I-32-vHK" kind="relationship" relationship="viewControllers" id="cKs-rX-y2T"/>
                         <segue destination="xLU-sb-1ia" kind="relationship" relationship="viewControllers" id="mnc-FI-fOs"/>
                         <segue destination="HZw-ZX-5Jx" kind="relationship" relationship="viewControllers" id="Jiz-Vq-dY3"/>
                         <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="Cnx-yY-ayK"/>
@@ -70,7 +72,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6NG-Ba-U4e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3004" y="-380"/>
+            <point key="canvasLocation" x="-3015" y="-382"/>
         </scene>
         <!--CGAGuide-->
         <scene sceneID="x6l-Vk-bsz">
@@ -231,7 +233,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.29204627871513367" green="0.65247046947479248" blue="0.49190118908882141" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XlR-6D-pNE" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="52" id="26x-Qn-9e9"/>
                             <constraint firstItem="ufw-i0-710" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="54" id="9U0-91-ufG"/>
@@ -259,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2402" y="503"/>
+            <point key="canvasLocation" x="-2402" y="502"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="n2T-TW-hgm">
@@ -331,7 +333,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ELo-oe-s9v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1321" y="-143"/>
+            <point key="canvasLocation" x="2260" y="-143.47826086956522"/>
         </scene>
         <!--Favorite-->
         <scene sceneID="cxC-QW-vOw">
@@ -347,7 +349,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wuk-3P-r3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5214" y="-445"/>
+            <point key="canvasLocation" x="6152.8000000000002" y="-445.72713643178412"/>
         </scene>
         <!--Sessions-->
         <scene sceneID="iU0-7I-6lT">
@@ -765,17 +767,17 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pzn-gQ-xD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="GiU-kn-DaD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="406" y="913"/>
+            <point key="canvasLocation" x="-180" y="737"/>
         </scene>
         <!--CGAPublic-->
         <scene sceneID="rCV-Bm-8uZ">
             <objects>
                 <viewControllerPlaceholder storyboardName="CGAPublic" id="FGW-r6-co8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="sAj-ci-ryc"/>
+                    <navigationItem key="navigationItem" id="Z5H-6s-TAN"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jrN-9g-P10" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2289" y="-349"/>
+            <point key="canvasLocation" x="-364" y="-284.25787106446779"/>
         </scene>
         <!--Patients-->
         <scene sceneID="gTF-oa-QFT">
@@ -795,16 +797,111 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Woo-pk-hZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1486" y="-636"/>
+            <point key="canvasLocation" x="-1939" y="-778"/>
+        </scene>
+        <!--App Intro-->
+        <scene sceneID="7nx-d8-sZx">
+            <objects>
+                <viewController id="Lmd-4V-Rmi" customClass="AppIntro" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TxJ-9N-f4x"/>
+                        <viewControllerLayoutGuide type="bottom" id="KVb-Mi-MdO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a2n-La-4BX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98624199629999998" green="0.77968657019999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <connections>
+                        <segue destination="ldk-HW-20u" kind="show" identifier="leaveAppIntro" id="Tjg-tp-tyX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ze1-NC-yiA" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4318" y="-777"/>
+        </scene>
+        <!--CGA-->
+        <scene sceneID="3ZK-7Z-4lY">
+            <objects>
+                <viewController id="T6I-32-vHK" customClass="CGAPublicInfo" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zfn-wL-R6H"/>
+                        <viewControllerLayoutGuide type="bottom" id="1Dq-FI-pzq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1Lj-NS-pG7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="gYN-cU-myb">
+                                <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="5tD-QL-96E"/>
+                                    <constraint firstAttribute="width" secondItem="gYN-cU-myb" secondAttribute="height" multiplier="1:1" id="SS6-my-OUU"/>
+                                    <constraint firstAttribute="height" constant="200" id="Wbg-QK-V8u"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal">
+                                    <string key="title">CRIAR
+SESSÃO</string>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="100"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="titleLabel.textAlignment">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="startPublicSessionButtonClicked:" destination="T6I-32-vHK" eventType="touchUpInside" id="LqE-rA-Uce"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gYN-cU-myb" firstAttribute="centerX" secondItem="1Lj-NS-pG7" secondAttribute="centerX" id="k6d-91-uRo"/>
+                            <constraint firstItem="gYN-cU-myb" firstAttribute="centerY" secondItem="1Lj-NS-pG7" secondAttribute="centerY" id="nT5-xD-JiT"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="CGA" image="Info-50" id="SUB-tz-SLt"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="MMc-R0-YKt" kind="show" identifier="StartPublicSession" id="4G1-GS-APR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1HX-Ri-oM5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1862" y="-283"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="NAT-jh-mJh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MMc-R0-YKt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="sAj-ci-ryc"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rbo-fm-NyP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FGW-r6-co8" kind="relationship" relationship="rootViewController" id="QwJ-A2-mTY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MgG-ET-xo3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1047" y="-284"/>
         </scene>
     </scenes>
     <resources>
         <image name="Account" width="25" height="25"/>
+        <image name="Info-50" width="25" height="25"/>
         <image name="pill" width="13" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Snr-ky-S8C"/>
-        <segue reference="GnM-Yr-cEm"/>
         <segue reference="XH4-lZ-S85"/>
+        <segue reference="GnM-Yr-cEm"/>
+        <segue reference="Tjg-tp-tyX"/>
     </inferredMetricsTieBreakers>
 </document>
